Correción de as_p y usuario moderador

--- a/mpgrande/app/templates/app/application_approve.html
+++ b/mpgrande/app/templates/app/application_approve.html
@@ -14,7 +14,7 @@
             <div class="form-group">
             
                 {% csrf_token %} <!--validar -->
-                {{ from_solicitud.as_p }}
+                {{ from_solicitud.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Modificar solicitud">
             </div>
