--- a/mpgrande/app/templates/app/confirm_order.html
+++ b/mpgrande/app/templates/app/confirm_order.html
@@ -13,7 +13,7 @@
             <div class="form-group">
             
                 {% csrf_token %}
-                {{ formulario2.as_p }}
+                {{ formulario2.as_bootstrap }}
 
 
                 <input class="btn btn-default" type="submit" value="Confirmar entrega">
