--- a/mpgrande/app/templates/app/create_auction.html
+++ b/mpgrande/app/templates/app/create_auction.html
@@ -16,7 +16,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ from_solicitud.as_p }}
+                {{ from_solicitud.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Crear producto">
 
