--- a/mpgrande/app/templates/app/create_end_auction.html
+++ b/mpgrande/app/templates/app/create_end_auction.html
@@ -52,7 +52,7 @@
                 {% endfor %} 
 
                 
-                {{ formulario.as_p }}
+                {{ formulario.as_bootstrap }}
                 <input class="btn btn-default" type="submit" value="Terminar subasta">
 
                 <hr width="30%">
