--- a/mpgrande/app/templates/app/create_participate_auction.html
+++ b/mpgrande/app/templates/app/create_participate_auction.html
@@ -35,7 +35,7 @@
 
                 {% csrf_token %} <!--validar -->
 
-                {{ formulario.as_p }}
+                {{ formulario.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Iniciar subasta">
 
