--- a/mpgrande/app/templates/app/create_product.html
+++ b/mpgrande/app/templates/app/create_product.html
@@ -12,7 +12,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ from_producto.as_p }}
+                {{ from_producto.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Crear producto">
 
