--- a/mpgrande/app/templates/app/create_sale.html
+++ b/mpgrande/app/templates/app/create_sale.html
@@ -11,7 +11,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ from_venta.as_p }}
+                {{ from_venta.as_bootstrap }}
                 
 
                 <input class="btn btn-default" type="submit" value="Crear venta">
