--- a/mpgrande/app/templates/app/create_ticket.html
+++ b/mpgrande/app/templates/app/create_ticket.html
@@ -16,7 +16,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ formulario.as_p }}
+                {{ formulario.as_bootstrap }}
 
 
                 {% for p in ventas %} 
