--- a/mpgrande/app/templates/app/info_approve_request.html
+++ b/mpgrande/app/templates/app/info_approve_request.html
@@ -12,7 +12,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ formulario.as_p }}
+                {{ formulario.as_bootstrap }}
 
 
                 {% for p in id_Solicitud %} 
