--- a/mpgrande/app/templates/app/modify_staff.html
+++ b/mpgrande/app/templates/app/modify_staff.html
@@ -11,7 +11,7 @@
             <div class="form-group">
             
                 {% csrf_token %} <!--validar -->
-                {{ from_personal.as_p }}
+                {{ from_personal.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Modificar personal">
             </div>
