--- a/mpgrande/app/templates/app/modify_user.html
+++ b/mpgrande/app/templates/app/modify_user.html
@@ -12,7 +12,7 @@
             
                 {% csrf_token %}
 
-                {{ form_usuario.as_p }}
+                {{ form_usuario.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Modificar usuario">
 
