--- a/mpgrande/app/templates/app/index.html
+++ b/mpgrande/app/templates/app/index.html
@@ -59,7 +59,7 @@
                                             <a href="#" onclick="eliminarSolicitud({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
                                             
                                             
-                                            {% if  user|has_role:'moderador'  %}
+                                            {% if  user|has_role:'administrador'  %}
     
                                             <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Modificar Estado</a>
                                             {% endif %}
@@ -235,7 +235,7 @@
                     </table>
     
                     </div>
-                    {% if user|has_role:'moderador'   or  user|has_role:'consultor'  %}
+                    {% if user|has_role:'administrador'   or  user|has_role:'consultor'  %}
                       
                         
                         <form method="POST">
