--- a/mpgrande/app/templates/app/list_product.html
+++ b/mpgrande/app/templates/app/list_product.html
@@ -70,7 +70,7 @@
 
 
 
-                                {% if user|has_role:'moderador'  %}
+                                {% if user|has_role:'administrador'  %}
                         
                                 <a href="#" onclick="eliminarProducto({{ p,id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
                                 {% endif %}
