--- a/mpgrande/app/templates/app/modify_product.html
+++ b/mpgrande/app/templates/app/modify_product.html
@@ -11,7 +11,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ from_producto.as_p }}
+                {{ from_producto.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Modificar producto">
 
