--- a/mpgrande/app/templates/app/post_create_product.html
+++ b/mpgrande/app/templates/app/post_create_product.html
@@ -14,7 +14,7 @@
             
                 {% csrf_token %} <!--validar -->
 
-                {{ from_producto.as_p }}
+                {{ from_producto.as_bootstrap }}
 
                 <input class="btn btn-default" type="submit" value="Registrar producto">
 
