--- a/mpgrande/app/templates/app/home.html
+++ b/mpgrande/app/templates/app/home.html
@@ -1,12 +1,14 @@
-{% extends 'base/header.html' %}
+% extends 'base/base.html' %}
 
-{%load static%} 
 
-{% block content %}
 
-{%block css%} 
-<link rel="stylesheet" href="{% static '/css/home.css'%}">
-{%endblock%} 
+
+
+
+
+
+{% block content %} 
+{% load permission_tags %}
 
 <main>
     <div class="container-form">
