--- a/mpgrande/app/templates/app/create_end_auction.html
+++ b/mpgrande/app/templates/app/create_end_auction.html
@@ -1,20 +1,13 @@
 {% extends 'base/sidebar.html' %}
 
 
-{% load permission_tags %}
+{%load static%} 
 
+{% block content %}
 
-
-    {% block titulo %} Terminar Subasta  {% endblock titulo %}
-
-
-
-
-    {% block portada %} Terminar Subasta {% endblock portada %}
-
-
-
-{% block content %} 
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%}  
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
