--- a/mpgrande/app/templates/app/create_participate_auction.html
+++ b/mpgrande/app/templates/app/create_participate_auction.html
@@ -1,10 +1,12 @@
 {% extends 'base/sidebar.html' %}
 
-{% block titulo %} Participar en subasta  {% endblock titulo %}
+{%load static%} 
 
-{% block portada %} Participar en subasta {% endblock portada %}
+{% block content %}
 
-{% block content %} 
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%}  
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
