--- a/mpgrande/app/templates/app/list_sales.html
+++ b/mpgrande/app/templates/app/list_sales.html
@@ -1,6 +1,12 @@
 {% extends 'base/sidebar.html' %}
 
-{% block content %} 
+{%load static%} 
+
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <div class="container">
     <div class="col-md-6 col-md-offset-3 form-box">
