--- a/mpgrande/app/templates/app/list_ticket_producer.html
+++ b/mpgrande/app/templates/app/list_ticket_producer.html
@@ -1,6 +1,12 @@
 {% extends 'base/sidebar.html' %}
 
-{% block content %} 
+{%load static%} 
+
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <div class="container">
     <div class="container-fluid p-0 col-md-11 col-md-offset-1 col-sm-10 form-box">
