--- a/mpgrande/app/templates/app/list_user.html
+++ b/mpgrande/app/templates/app/list_user.html
@@ -1,5 +1,13 @@
 {% extends 'base/sidebar.html' %}
 
+{%load static%} 
+
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
+
 <div class="container">
     <div class="col-md-6 col-md-offset-3 form-box">
         <h2>Lista de usuaios</h2>
