--- a/mpgrande/app/templates/app/post_create_product.html
+++ b/mpgrande/app/templates/app/post_create_product.html
@@ -1,8 +1,12 @@
 {% extends 'base/sidebar.html' %}
 
+{%load static%} 
 
+{% block content %}
 
-{% block content %} 
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
