--- a/mpgrande/app/templates/app/create_end_auction.html
+++ b/mpgrande/app/templates/app/create_end_auction.html
@@ -1,13 +1,20 @@
-{% extends 'base/sidebar.html' %}
+{% extends 'base/base.html' %}
 
 
-{%load static%} 
+{% load permission_tags %}
 
-{% block content %}
 
-{%block css%} 
-<link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+
+    {% block titulo %} Terminar Subasta  {% endblock titulo %}
+
+
+
+
+    {% block portada %} Terminar Subasta {% endblock portada %}
+
+
+
+{% block content %} 
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
