Correccion de error de urls

--- a/mpgrande/app/templates/app/home.html
+++ b/mpgrande/app/templates/app/home.html
@@ -2,7 +2,7 @@
 
 {%load static%} 
 
-{% block contenido %}
+{% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/home.css'%}">
