--- a/mpgrande/app/templates/base/sidebar.html
+++ b/mpgrande/app/templates/base/sidebar.html
@@ -106,7 +106,7 @@
 </div>
 
     
-{% block contenido %}
+{% block content %}
 
 {% endblock  %}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
