Correccion de templates

--- a/mpgrande/app/templates/base/sidebar.html
+++ b/mpgrande/app/templates/base/sidebar.html
@@ -91,7 +91,7 @@
             {% endif %}
 
             {% if user|has_role:'consultor'  %}
-            <a href="{% url 'list_ticker_producer' %}">  Boletas </a>
+            <a href="{% url 'list_ticket_producer' %}">  Boletas </a>
             {% endif %}
 
             {% if perms.cuenta.add_personal %}
