Correccion de create_product views

--- a/mpgrande/app/templates/app/info_ticket.html
+++ b/mpgrande/app/templates/app/info_ticket.html
@@ -72,7 +72,7 @@
                                 
                                 
     
-                                {% if perms.cuenta.delete_producto  %}
+                                {% if perms.app.delete_producto  %}
                                 {% endif %}
     
                                 {% endif %}    
