--- a/mpgrande/app/templates/app/create_product.html
+++ b/mpgrande/app/templates/app/create_product.html
@@ -86,7 +86,7 @@
                             
                             
 
-                            {% if perms.cuenta.delete_producto  %}
+                            {% if perms.app.delete_producto  %}
                             {% endif %}
 
                             {% endif %}    
