--- a/mpgrande/app/templates/app/post_create_product.html
+++ b/mpgrande/app/templates/app/post_create_product.html
@@ -88,7 +88,7 @@
                             
                             
 
-                            {% if perms.cuenta.delete_producto  %}
+                            {% if perms.app.delete_producto  %}
                             {% endif %}
 
                             {% endif %}    
