--- a/mpgrande/app/static/css/header.css
+++ b/mpgrande/app/static/css/header.css
@@ -1,6 +1,6 @@
 
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
     font-size: 1.2 rem;
     line-height: 1.6em;
