--- a/mpgrande/app/templates/app/create_product.html
+++ b/mpgrande/app/templates/app/create_product.html
@@ -75,7 +75,7 @@
                             <a href="{%  url 'modify_product' p.id %}" class="btn btn-info btn-sm ">Modificar</a>
 
 
-                            <a href="#" onclick="eliminarProducto({{ p,id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
+                            <a href="#" onclick="eliminarProducto({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
 
                             {% if p.estado_fk.desc_estado  == "Disponible" and p.usuario_fk.username != user.username %} <!-- PARA FK---->
 
