Correccion de templates part1

--- a/mpgrande/app/templates/base/sidebar.html
+++ b/mpgrande/app/templates/base/sidebar.html
@@ -19,7 +19,7 @@
     {%load static%}
     <script type="text/javascript" charset="utf8" src="/DataTables/datatables.js"></script>
      <!-- estilos -->
-    <link rel="stylesheet" href="{% static 'app/css/sidebar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/sidebar.css'%}">
     <!-- estilos -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
