--- a/mpgrande/app/templates/app/application_approve.html
+++ b/mpgrande/app/templates/app/application_approve.html
@@ -1,10 +1,12 @@
 {% extends 'base/sidebar.html' %}
 
-{% block titulo %} Modificar solicitud  {% endblock titulo %}
+{%load static%} 
 
-{% block portada %} Modificar solicitud   {% endblock portada %}
+{% block content %}
 
-{% block content %} 
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <div class="container">
     <div class="col-md-8 col-md-offset-2 form-box">
